--- a/main-OCL1_P1_201612106/nbproject/project.properties
+++ b/main-OCL1_P1_201612106/nbproject/project.properties
@@ -29,11 +29,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.java-cup-11b.jar=java-cup-11b.jar
 file.reference.jflex-1.7.0.jar=jflex-1.7.0.jar
+file.reference.JTattoo-1.6.13.jar=JTattoo-1.6.13.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.java-cup-11b.jar}:\
-    ${file.reference.jflex-1.7.0.jar}
+    ${file.reference.jflex-1.7.0.jar}:\
+    ${file.reference.JTattoo-1.6.13.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
